# qc803-QAOAFinal

./: .gitignore  README.md  approximation_results.txt  dependecies.txt  functions.py  good tests.txt  greedy_algorithm.py  libraries.py  metrics.py  noise.ipynb  normalize_data.py  plot_aproximation ratio.ipynb  print_result.py  project.ipynb  project.py  pyproject.toml  run_qaoa.py
src/qc803_project/: project.ipynb
